# EccoPy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
conda-recipe/: README.md  meta.yaml
eccopy/: __init__.py
eccopy/core/: __init__.py  classification.py  colormaps.py  convectivity.py  coords.py  debug.py  fill.py  temperature.py  texture.py
eccopy/eccopy1d/: __init__.py  classify.py  plot.py
eccopy/eccopy2d_h/: __init__.py  classify.py  clumping.py  plot.py
eccopy/eccopy2d_v/: __init__.py  classify.py  plot.py
eccopy/eccopy3d/: __init__.py  classify.py  clumping.py  plot.py
eccopy/params/: __init__.py  classification_params.py  texture_params.py  vertical_params.py  window.py
eccopy/stats/: __init__.py  basic_stats.py
eccopy/tests/: test_classification_1d_filter.py  test_classification_rain_below_melt.py  test_colormaps.py  test_coords.py  test_debug.py  test_eccopy1d.py  test_eccopy2d_h.py  test_eccopy2d_h_clumping.py  test_eccopy2d_v.py  test_eccopy3d.py  test_numba_cross_validation.py  test_packaging.py  test_plot_result.py  test_refl_texture_1d.py  test_stats.py  test_temperature.py  test_texture_kernel_modes.py  test_window.py
eccopy/tests/_reference_impls/: isotherm_height_reference.py  sliding_texture_reference.py  texture_2d_reference.py
examples/: example_1d.py  example_2d_h.py  example_2d_v.py  example_3d.py  export_disk_strels.m  run_export_disk_strels.sh
examples/disk_strels/: disk_strel_r15.mat  disk_strel_r25.mat  disk_strel_r3.mat
notebooks/: eccopy2d_v_workflow_template (1).ipynb  eccopy2d_v_workflow_template_SPOL.ipynb  eccopy3d_workflow.ipynb  eccov_workflow.ipynb
notebooks/workflow_examples/: README.md  eccopy1d_workflow.ipynb  eccopy2d_h_workflow.ipynb  eccopy2d_v_workflow.ipynb  eccopy3d_workflow.ipynb
(+17 files in other folders)
